# RL-GroupQ

./: README.md  codebook.toml  pyproject.toml  requirements-amd.txt  requirements-cpu.txt  requirements-nvidia-cu12.txt  requirements-nvidia-cu13.txt  requirements-nvidia.txt
dependencies/: stable_baselines3-2.9.0a2-py3-none-any.whl
docs/: main.typ  refs.bib
src/: config_a.ipynb  config_b.ipynb  plots.ipynb  rl_sepsis_project.ipynb
src/config_a/: __init__.py  policy_iteration.py  q_learning.py  sarsa.py
src/config_b/: __init__.py  dqn.py  ppo.py
src/envs/: env_setup.py  wrappers.py
src/logs/: dqn_best_trial_params.csv  dqn_episode_returns_train.csv  dqn_mean_return_eval.csv  pi_episode_length_eval.csv  pi_mean_return_eval.csv  ppo_best_trial_params.csv  ppo_episode_returns_train.csv  ppo_mean_return_eval.csv  ql_best_trial_params.csv  ql_episode_length_eval.csv  ql_episode_length_train.csv  ql_episode_returns_train.csv  ql_mean_return_eval.csv
src/utils/: __init__.py  config_a.py  config_b.py
